@@ -22,6 +22,7 @@ def get_command_keywords(self_cmd=cmd):
         'angle'         : [ self_cmd.angle             , 0 , 0 , ''  , parsing.STRICT ],          
         'api'           : [ self_cmd.helping.api       , 0 , 0 , ''  , parsing.STRICT ],
         'as'            : [ self_cmd.show_as           , 0 , 0 , ''  , parsing.STRICT ],          
+        'assert'        : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ], 
         'attach'        : [ self_cmd.attach            , 0 , 0 , ''  , parsing.STRICT ],
         'backward'      : [ self_cmd.backward          , 0 , 0 , ''  , parsing.STRICT ],
         'bg_color'      : [ self_cmd.bg_color          , 0 , 0 , ''  , parsing.STRICT ],
@@ -37,6 +38,7 @@ def get_command_keywords(self_cmd=cmd):
         'center'        : [ self_cmd.center            , 0 , 0 , ''  , parsing.STRICT ],     
         'check'         : [ self_cmd.check             , 0 , 0 , ''  , parsing.STRICT ],
         'clean'         : [ self_cmd.clean             , 0 , 0 , ''  , parsing.STRICT ],
+        'class'         : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ], 
         'clip'          : [ self_cmd.clip              , 0 , 0 , ''  , parsing.STRICT ],
         'cls'           : [ self_cmd.cls               , 0 , 0 , ''  , parsing.STRICT ],
         '_ctrl'         : [ self_cmd._ctrl             , 0 , 0 , ''  , parsing.STRICT ],        
@@ -52,6 +54,8 @@ def get_command_keywords(self_cmd=cmd):
         'create'        : [ self_cmd.create            , 0 , 0 , ''  , parsing.LEGACY ],
         'decline'       : [ self_cmd.decline           , 0 , 0 , ''  , parsing.STRICT ],      
         'delete'        : [ self_cmd.delete            , 0 , 0 , ''  , parsing.STRICT ],
+        'def'           : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ],   
+        'del'           : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ],
         'deprotect'     : [ self_cmd.deprotect         , 0 , 0 , ''  , parsing.STRICT ],
         'desaturate'    : [ self_cmd.desaturate        , 0 , 0 , ''  , parsing.STRICT ],
         'deselect'      : [ self_cmd.deselect          , 0 , 0 , ''  , parsing.STRICT ],
@@ -70,6 +74,7 @@ def get_command_keywords(self_cmd=cmd):
         'ending'        : [ self_cmd.ending            , 0 , 0 , ''  , parsing.STRICT ],
         'extra_fit'     : [ self_cmd.extra_fit         , 0 , 0 , ''  , parsing.STRICT ],
         'extract'       : [ self_cmd.extract           , 0 , 0 , ''  , parsing.STRICT ],            
+        'exec'          : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ],   
         'export_dots'   : [ self_cmd.export_dots       , 0 , 0 , ''  , parsing.STRICT ],
         'fab'           : [ self_cmd.fab               , 0 , 0 , ''  , parsing.STRICT ],
         'feedback'      : [ self_cmd.feedback          , 0,  0 , ''  , parsing.STRICT ],
@@ -78,6 +83,7 @@ def get_command_keywords(self_cmd=cmd):
         'fix_chemistry' : [ self_cmd.fix_chemistry     , 0 , 0 , ''  , parsing.STRICT ],
         'flag'          : [ self_cmd.flag              , 0 , 0 , ''  , parsing.LEGACY ],
         'focal_blur'    : [ self_cmd.focal_blur        , 0 , 0 , ''  , parsing.STRICT ],
+        'for'           : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ],
         'fork'          : [ self_cmd.spawn             , 0 , 0 , ''  , parsing.SECURE ],
         'forward'       : [ self_cmd.forward           , 0 , 0 , ''  , parsing.STRICT ],
         'fragment'      : [ self_cmd.fragment          , 0 , 0 , ''  , parsing.STRICT ],
@@ -100,6 +106,7 @@ def get_command_keywords(self_cmd=cmd):
         'get_version'   : [ self_cmd.get_version       , 0 , 0 , ''  , parsing.STRICT ],            
         'get_view'      : [ self_cmd.get_view          , 0 , 0 , ''  , parsing.STRICT ],
         'get_viewport'  : [ self_cmd.get_viewport      , 0 , 0 , ''  , parsing.STRICT ],
+        'global'        : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ],
         'gradient'      : [ self_cmd.gradient          , 0 , 0 , ''  , parsing.STRICT ],            
         'group'         : [ self_cmd.group             , 0 , 0 , ''  , parsing.STRICT ],
         'h_add'         : [ self_cmd.h_add             , 0 , 0 , ''  , parsing.STRICT ],
@@ -110,6 +117,8 @@ def get_command_keywords(self_cmd=cmd):
         'hide'          : [ self_cmd.hide              , 0 , 0 , ''  , parsing.STRICT ],
         'id_atom'       : [ self_cmd.id_atom           , 0 , 0 , ''  , parsing.STRICT ],
         'identify'      : [ self_cmd.identify          , 0 , 0 , ''  , parsing.STRICT ],
+        'if'            : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ],
+        'import'        : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ],   
         'index'         : [ self_cmd.index             , 0 , 0 , ''  , parsing.STRICT ],
         'indicate'      : [ self_cmd.indicate          , 0 , 0 , ''  , parsing.STRICT ],   
         'intra_fit'     : [ self_cmd.intra_fit         , 0 , 0 , ''  , parsing.STRICT ],
@@ -173,6 +182,7 @@ def get_command_keywords(self_cmd=cmd):
         'orient'        : [ self_cmd.orient            , 0 , 0 , ''  , parsing.STRICT ],
         'overlap'       : [ self_cmd.overlap           , 0 , 0 , ''  , parsing.STRICT ],
         'pair_fit'      : [ self_cmd.pair_fit          , 0 , 0 , ''  , parsing.STRICT ],
+        'pass'          : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ],
         'phi_psi'       : [ self_cmd.phi_psi           , 0 , 0 , ''  , parsing.STRICT ],
         'pop'           : [ self_cmd.pop               , 0 , 0 , ''  , parsing.STRICT ],
         'protect'       : [ self_cmd.protect           , 0 , 0 , ''  , parsing.STRICT ],
@@ -180,6 +190,7 @@ def get_command_keywords(self_cmd=cmd):
         'pwd'           : [ self_cmd.pwd               , 0 , 0 , ''  , parsing.STRICT ],
         'python'        : [ self_cmd.helping.python    , 0 , 2 , ',' , parsing.PYTHON_BLOCK ],
         'skip'          : [ self_cmd.helping.skip      , 0 , 1 , ',' , parsing.SKIP ],
+        'raise'         : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ],
         'ramp_new'      : [ self_cmd.ramp_new          , 0 , 0 , ''  , parsing.STRICT ],      
         'ray'           : [ self_cmd.ray               , 0 , 0 , ''  , parsing.STRICT ],
         'rebuild'       : [ self_cmd.rebuild           , 0 , 0 , ''  , parsing.STRICT ],
@@ -243,6 +254,7 @@ def get_command_keywords(self_cmd=cmd):
         'toggle'        : [ self_cmd.toggle            , 0 , 0 , ''  , parsing.STRICT ],      
         'torsion'       : [ self_cmd.torsion           , 0 , 0 , ''  , parsing.STRICT ], # vs toggle_object
         'translate'     : [ self_cmd.translate         , 0 , 0 , ''  , parsing.STRICT ],
+        'try'           : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ],
         'turn'          : [ self_cmd.turn              , 0 , 0 , ''  , parsing.STRICT ],
         'quit'          : [ self_cmd.quit              , 0 , 0 , ''  , parsing.STRICT ],
         '_quit'         : [ self_cmd._quit             , 0 , 0 , ''  , parsing.STRICT ],
@@ -263,6 +275,7 @@ def get_command_keywords(self_cmd=cmd):
         'volume_color'  : [ self_cmd.volume_color      , 0 , 0 , ''  , parsing.STRICT ],
         'volume_panel'  : [ self_cmd.volume_panel      , 0 , 0 , ''  , parsing.STRICT ],
         'window'        : [ self_cmd.window            , 0 , 0 , ''  , parsing.STRICT ],         
+        'while'         : [ self_cmd.python_help       , 0 , 0 , ''  , parsing.PYTHON ],   
         'wizard'        : [ self_cmd.wizard            , 0 , 0 , ''  , parsing.STRICT ],
         'zoom'          : [ self_cmd.zoom              , 0 , 0 , ''  , parsing.STRICT ],
         # utility programs
